# devtrail

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  dashboard.py  install.ps1  launch.bat  pyproject.toml  start.ps1  start.py  ㄹㅇㄹ
.claude/: github.example.json  global.md  settings.example.json
app/: __init__.py  cli.py  config.py  mcp_server.py  vault_tools.py
docs/: architecture.md  feature-reference.md  implementation-status.md  llm_router_todo.md  mac-automation-setup.md  prompt-library-plan.md  rename-to-devtrail.md  server-automation.md  service-improvement-plan.md  vault-ai-integration.md  vault-consumption-plan.md  vault-mcp-fix-plan.md  vault-mcp-implementation-summary.md
scripts/: register-local.ps1  register-schedules.ps1  run-bot-service.ps1  run-nightly-safe.ps1  run-notify.ps1  run-weekly-safe.ps1  sync-vault-local.ps1  sync-vault.ps1  update-devtrail.ps1  update-work-agent.ps1
tests/: conftest.py  test_assistant.py  test_assistant_bot.py  test_candidate_writer.py  test_capture_agent.py  test_capture_session.py  test_career_bullet_agent.py  test_cli.py  test_context_pack.py  test_curator_agent.py  test_distill_agent.py  test_init_project.py  test_learning_loop.py  test_llm_fallback.py  test_llm_router.py  test_mcp_server.py  test_messaging_router.py  test_nightly_distill.py  test_obsidian_source.py  test_open_loops_agent.py  test_pipeline_health.py  test_pipeline_improvements.py  test_plan_check_hook.py  test_project_agent.py  test_project_briefing_cli.py  test_retention.py  test_review_question.py  (+6 more)
(+114 files in other folders)
