[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devtrail"
version = "0.1.0"
description = "Obsidian 기반 LLM Wiki와 개인 지식 OS CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-frontmatter>=1.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "markdown>=3.5",
    "textual>=0.60",
    "mcp>=1.2",
]

[project.optional-dependencies]
notion = ["notion-client>=2.2"]
dev = [
    "pytest>=8.0",
    "notion-client>=2.2",
]

[project.scripts]
devtrail = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
